<resources>
    <string name="app_name">My Movie</string>
    <string name="more_info">More Information</string>
    <string name="release_information">Release Information</string>
    <string-array name="certification">
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-PG</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-PG</item>
        <item>TV-MA</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-MA</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-PG</item>
        <item>TV-14</item>
        <item>TV-PG</item>
        <item>TV-14</item>
        <item>TV-MA</item>
    </string-array>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="overview">Overview</string>
    <string name="the_poster">The Poster</string>
    <string name="tittle_movies">MOVIES</string>
    <string name="tittle_tv_shows">TV SHOWS</string>
    <string-array name="movie_title">
        <item>A Star Is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Avengers: Infinity War</item>
        <item>Mary Queen of Scots</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>T-34</item>
    </string-array>
    <string-array name="movie_year">
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
    </string-array>
    <string-array name="release_info">
        <item>October 5, 2018</item>
        <item>February 14, 2019</item>
        <item>December 21, 2018</item>
        <item>October 30, 2018</item>
        <item>February 8, 2019</item>
        <item>November 14, 2018</item>
        <item>November 16, 2018</item>
        <item>January 18, 2019</item>
        <item>February 22, 2019</item>
        <item>April 23, 2018</item>
        <item>November 15, 2018</item>
        <item>April 12, 2019</item>
        <item>December 14, 2018</item>
        <item>September 22, 2018</item>
        <item>November 5, 2018</item>
        <item>November 21, 2018</item>
        <item>January 25, 2019</item>
        <item>December 1, 2018</item>
        <item>December 27, 2018</item>
    </string-array>
    <string-array name="movie_runtime">
        <item>2h 15m</item>
        <item>2h 2m</item>
        <item>2h 24m</item>
        <item>2h 15m</item>
        <item>1h 59m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
        <item>2h 10m</item>
        <item>1h 44m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>1h 47m</item>
        <item>2h 9m</item>
        <item>1h 50m</item>
        <item>1h 52m</item>
        <item>1h 56m</item>
        <item>1h 46m</item>
        <item>1h 57m</item>
        <item>2h 19m</item>
    </string-array>
    <string-array name="movie_genre">
        <item>Drama, Romance</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Action, Adventure, Fantasy, Science Fiction</item>
        <item>Drama, Music</item>
        <item>Action, Drama, Thriller, Crime, Comedy</item>
        <item>Drama</item>
        <item>Adventure</item>
        <item>Thriller, Mystery, Drama, Fantasy, Science Fiction</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Drama, History</item>
        <item>Action</item>
        <item>Science Fiction, Action, Adventure, Fantasy, Thriller</item>
        <item>Horror, War, Science Fiction</item>
        <item>Family, Animation, Comedy, Fantasy, serenity</item>
        <item>Adventure, Action, Thriller</item>
        <item>Thriller, Drama, Mystery, Science Fiction</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>War, Drama, Adventure, Action</item>
    </string-array>
    <string-array name="movie_cast">
        <item>Lady Gaga as Ally Campana, Sam Elliott as Bobby Maine, Andrew Dice as Clay Lorenzo Campana, Rafi Gavron as Rez Gavron</item>
        <item>Rosa Salazar as Alita, Christoph Waltz as Dr. Dyson Ido, Mahershala Ali as Vector, Keean Johnson as Hugo, Jennifer Connelly as Chiren</item>
        <item>Jason Momoa as Arthur Curry / Aquaman, Amber Heard as Mera, Willem Dafoe as Nuidis Vulko, Patrick Wilson as ing Orm Marius / Ocean Master, Nicole Kidman as Atlanna</item>
        <item>Rami Malek as Freddie Mercury, Gwilym Lee as Brian May, Ben Hardy as Roger Taylor, Joseph Mazzello as John Deacon, Lucy Boynton as Mary Austin</item>
        <item>Liam Neeson as Nels Coxman, Laura Dern as Grace Coxman, Micheál Richardson as Kyle Coxman, Michael Eklund as Speedo, Bradley Stryker as Limbo</item>
        <item>Michael B. Jordan as Adonis Creed, Sylvester Stallone as Robert \"Rocky\" Balboa, Sr., Wood Harris as Tony \"Little Duke\" Evers, Phylicia Rashād as Mary Anne Creed, Dolph Lundgren as Ivan Drago</item>
        <item>Eddie Redmayne as Newt Scamander, Katherine Waterston as Porpentina \"Tina\" Goldstein, Alison Sudol as Queenie Goldstein, Johnny Depp as Gellert Grindelwald, Jude Law as Albus Dumbledore</item>
        <item>James McAvoy as Kevin Wendell Crumb / Patricia / Dennis / Hedwig / The Beast / Barry / Heinrich / Jade / Ian / Mary Reynolds / Norma / Jalin / Kat / B. T. / Mr. Pritchard / Felida / Luke / Goddard / Samuel / Polly, Bruce Willis as David Dunn / The Overseer, Samuel L. Jackson as Elijah Price / Mr. Glass, Anya Taylor-Joy as Casey Cooke, Sarah Paulson as Dr. Ellie Staple</item>
        <item>Jay Baruchel as Hiccup (voice), America Ferrera as Astrid (voice), F. Murray Abraham as Grimmel (voice), Cate Blanchett as Valka (voice), Gerard Butler as Stoick (voice)</item>
        <item>Robert Downey Jr. as Tony Stark / Iron Man, Chris Hemsworth as Thor Odinson, Chris Evans as Steve Rogers / Captain America, Mark Ruffalo as Bruce Banner / The Hulk, Scarlett Johansson as Natasha Romanoff / Black Widow</item>
        <item>Saoirse Ronan as Mary Stuart, Margot Robbie as Queen Elizabeth I, Jack Lowden as Lord Darnley, Joe Alwyn as Robert Dudley, David Tennant as John Knox</item>
        <item>Zhang Jin as Cheung Tin-Chi, Dave Bautista as Owen Davidson, Liu Yan as Julia, Xing Yu as Fu, Michelle Yeoh as Sis Ha</item>
        <item>Hera Hilmar as Hester Shaw, Robert Sheehan as Tom Natsworthy, Hugo Weaving as Thaddeus Valentine, Jihae as Anna Fang, Ronan Raftery as Bevis Pod</item>
        <item>Jovan Adepo as Pvt. Ed Boyce, Wyatt Russell as Cpl. Ford, Mathilde Ollivier as Chloe, Pilou Asbæk as Wafner John Magaro as Tibbet</item>
        <item>John C. Reilly as Ralph (voice), Sarah Silverman as Vanellope (voice), Gal Gadot as Shank (voice), Taraji P. Henson as Yesss (voice), Jack McBrayer as Felix (voice)</item>
        <item>Taron Egerton as Robin of Loxley, Jamie Foxx as Yahya / John, Ben Mendelsohn as Sheriff of Nottingham, Eve Hewson as Marian, Jamie Dornan as Will Scarlet</item>
        <item>Matthew McConaughey as John Mason / Baker Dill, Anne Hathaway as Karen Zariakas, Diane Lane as Constance, Jason Clarke as Frank Zariakas, Djimon Hounsou as Duke</item>
        <item>Shameik Moore as Miles Morales / Spider-Man (voice), Jake Johnson as Peter B. Parker / Spider-Man (voice), Hailee Steinfeld as Gwen Stacy / Spider-Woman (voice), Mahershala Ali as Aaron Davis / Prowler (voice), Brian Tyree Henry as Jefferson Davis (voice)</item>
        <item>Alexander Petrov as Ivushkin, Victor Dobronravov, Irina Starshenbaum, Vinzenz Kiefer, Petr Skvortsov</item>
    </string-array>
</resources>